# marks_chess_engine

./: CMakeLists.txt  LICENSE  README.md
src/: Applicaiton.cpp  Application.cpp  Application.h  ChessEngine.cpp  ChessEngine.h  ChessGame.cpp  ChessGame.h  CommandQueue.cpp  CommandQueue.h  Common.cpp  Common.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Hash.h  HelperFunctions.cpp  HelperFunctions.h  Keyword.h  Rules.cpp  Rules.h  ThreadSafeQueue.h  UCICommand.cpp  UCICommand.h  UCIStateMachine.cpp  UCIStateMachine.h  UniversalChessInterface.cpp  UniversalChessInterface.h  Worker.cpp  Worker.h  main.cpp
test/: CMakeLists.txt  ChessGame-test.cpp  Rules-test.cpp  Rules-test.h  run_all_tests.cpp
